--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
 
 		<div class="column" id="projects">
 			<a class="projects" href="https://codepen.io/collection/AGkgYM" target="_blank" title="Personal Website 1" style="text-decoration: none;">
-				<img src="https://res.cloudinary.com/natalialopez17/image/upload/v1581793091/online%20portfolio/P.F._Candle_Co._Golden_Coast_Standard_Soy_Candle_400x_d2bu7i.jpg" style="width: 100%">
+				<img src="resources/P.F._Candle_Co._Golden_Coast_Standard_Soy_Candle_400x_d2bu7i.jpg" style="width: 100%">
 			</a>
 			
 			<a class="projects" href="https://codepen.io/collection/AeZkZa" target="_blank" title="Personal Website 2" style="text-decoration: none;">
-				<img src="https://res.cloudinary.com/natalialopez17/image/upload/v1581742357/online%20portfolio/photo-1436327266874-c2e4e1ac7a97_s0q8zz.jpg" style="width: 100%">
+				<img src="resources/photo-1436327266874-c2e4e1ac7a97_s0q8zz.jpg" style="width: 100%">
 			</a>
 
 			<a class="projects" href="https://gitlab.com/NataliaLopez17/p2" title="Car Dealer HashMap" style="text-decoration: none;">
-				<img src="https://res.cloudinary.com/natalialopez17/image/upload/v1581644785/online%20portfolio/photo-1461749280684-dccba630e2f6_ynb1w9.jpg" style="width: 100%">
+				<img src="resources/photo-1461749280684-dccba630e2f6_ynb1w9.jpg" style="width: 100%">
 			</a>
 
 		</div>
@@ -84,15 +84,15 @@
 
 		<div class="column">
 			<a class="projects" href="https://github.com/NataliaLopez17/Snake" target="_blank" title="Project Snake" style="text-decoration: none;">
-				<img src="https://res.cloudinary.com/natalialopez17/image/upload/v1581793160/online%20portfolio/obscure_20arcade_20games_20nibbler_ns72lm.png" style="width: 100%">
+				<img src="resources/obscure_20arcade_20games_20nibbler_ns72lm.png" style="width: 100%">
 			</a>
 
 			<a class="projects" href="https://github.com/NataliaLopez17/2D-Magicka" target="_blank" title="Project 2D-Magicka" style="text-decoration: none;">
-				<img src="https://res.cloudinary.com/natalialopez17/image/upload/v1581793576/online%20portfolio/67ce34c1ee48039f9d9b2ae399bf78fe_bzhfjf.jpg" style="width: 100%">
+				<img src="resources/67ce34c1ee48039f9d9b2ae399bf78fe_bzhfjf.jpg" style="width: 100%">
 			</a>
 
 			<a class="projects" href="https://github.com/NataliaLopez17/Envy-Project" title="Project Envy" style="text-decoration: none;">
-				<img src="https://res.cloudinary.com/natalialopez17/image/upload/v1581652940/online%20portfolio/fa638276f2a0761553718d344f3fbdfe_uohmqk.jpg" style="width: 100%">
+				<img src="resources/fa638276f2a0761553718d344f3fbdfe_uohmqk.jpg" style="width: 100%">
 			</a>
 
 		</div>
@@ -100,11 +100,11 @@
 
 		<div class="column">
 			<a class="projects" href="https://github.com/NataliaLopez17/Frogger" target="_blank" title="Frogger" style="text-decoration: none;">
-				<img src="https://res.cloudinary.com/natalialopez17/image/upload/v1581741912/online%20portfolio/frogger_goij3a.png" style="width: 100%">
+				<img src="resources/frogger_goij3a.png" style="width: 100%">
 			</a>
 
 			<a class="projects" href="https://gitlab.com/NataliaLopez17/p1start" target="_blank" title="Car Dealer SCDLL" style="text-decoration: none;">
-				<img src="https://res.cloudinary.com/natalialopez17/image/upload/v1581644773/online%20portfolio/photo-1515879218367-8466d910aaa4_xaplb7.jpg" style="width:100% ">
+				<img src="resources/photo-1515879218367-8466d910aaa4_xaplb7.jpg" style="width:100% ">
 			</a>
 
 			<div class="email-form">
